made property table on index page 100% wide

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing properties</h1>
 
-<table>
+<table style="width:100%;">
   <tr>
     <th>Street address</th>
     <th>Street address2</th>
